cmake_minimum_required(VERSION 2.8.0 FATAL_ERROR)
include(${CMAKE_CURRENT_SOURCE_DIR}/../CMakeLists.txt)
add_executable(testtaskpool TestTaskPool.cpp)
target_link_libraries(testtaskpool taskqueue)
target_include_directories(testtaskpool PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../src" "${CMAKE_CURRENT_LIST_DIR}/../threadpp" )
